# OneCAD

./: AGENTS.md  CLAUDE.md  CMakeLists.txt  GEMINI.md  LICENSE  README.md
.cursor/agents/: build-expert.md  cad-architect.md  occt-expert.md  perf-profiler.md  rendering-expert.md  sketch-expert.md  test-expert.md  ui-ux-expert.md
.cursor/commands/: build.md  configure.md  elementmap-test.md  format.md  proto.md  sketch-test.md  tidy.md
.cursor/plans/: sketch_on_face_and_grid_ddba6421.plan.md
.cursor/rules/: kernel-globs.mdc  onecad-overview.mdc  render-globs.mdc  sketch-globs.mdc  testing.mdc  ui-globs.mdc
.cursor/skills/constraint/: SKILL.md
.cursor/skills/occt-safe/: SKILL.md
.cursor/skills/proto-test/: SKILL.md
.cursor/skills/qt-widget/: SKILL.md
.github/workflows/: ci.yml
.opencode/: oh-my-opencode.jsonc  opencode.jsonc
docs/: FILE_FORMAT.md  PHASES.md  SKETCH_IMPLEMENTATION_PLAN.md  SPECIFICATION.md  UI_analysis.md
docs/researches/: FEATURE_TREE.md
resources/: resources.qrc
src/app/: CMakeLists.txt  Logging.cpp
src/core/: CMakeLists.txt
src/io/: CMakeLists.txt  DirectoryPackage.cpp  DirectoryPackage.h  DocumentIO.cpp  DocumentIO.h  ElementMapIO.cpp  ElementMapIO.h  HistoryIO.cpp  HistoryIO.h  JSONUtils.cpp  JSONUtils.h  ManifestIO.cpp  ManifestIO.h  OneCADFileIO.cpp  OneCADFileIO.h  Package.cpp  Package.h  SketchIO.cpp  SketchIO.h  ZipPackage.cpp  ZipPackage.h
src/io/step/: StepExporter.cpp  StepExporter.h  StepImporter.cpp  StepImporter.h
src/render/: BodyRenderer.cpp  BodyRenderer.h  Camera3D.cpp  Camera3D.h  Grid3D.cpp  Grid3D.h
src/ui/: CMakeLists.txt
tests/: CMakeLists.txt  test_compile.cpp
tests/prototypes/: proto_loop_detector.cpp  proto_planegcs_integration.cpp  proto_regeneration.cpp  proto_sketch_snap.cpp  proto_tessellation_cache.cpp
(+101 files in other folders)
